@@ -10,6 +10,7 @@ PySCF 1.4.3 (2018-01-?)
 -----------------------
 * Improved
   - Assert convergence in geometry optimization
+  - Initial guess in SCF PES scanning
 * Bugfix
   - XC parser to support the scaled compound functional
   - The effects of level_shift in second order SCF
